--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
-  "name": "nodejs-creating-restful-apis",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "name": "jwt-rest-api",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.2",
-    "express": "^4.16.2",
+    "bluebird": "^3.5.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "http-errors": "~1.6.2",
+    "jade": "~1.11.0",
     "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.0.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Abdurraheem/REST-API-JWTWEB-TOKEN.git"
-  },
-  "author": "Mohammad Raheem",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Abdurraheem/REST-API-JWTWEB-TOKEN/issues"
-  },
-  "homepage": "https://github.com/Abdurraheem/REST-API-JWTWEB-TOKEN#readme"
+    "mongoose": "^5.2.3",
+    "mongoose-paginate": "^5.0.3",
+    "morgan": "~1.9.0"
+  }
 }
